# fediverse

./: AUTHORS  CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  fediverse.py  pelican-fediverse.py  pelican_toot.py  pyproject.toml  requirements.txt  setup.py  tasks.py
.github/workflows/: publish.yml
pelican/plugins/fediverse/: fediverse.py
