[project]
name = "pelican-fediverse"
version = "1.3"
description = "Pelican plugin to publish contents on the Fediverse"
authors = [{name = "Maurizio Paglia", email = "maurizio@mauriziopaglia.it"}]
license = {text = "GPL-3.0"}
readme = "README.md"
keywords = ["pelican", "plugin", "fediverse"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = "~=3.9"
dependencies = [
    "pelican~=4.11.0",
    "Mastodon.py",
    "lxml~=5.4.0",
    "python-dotenv~=1.1.0"
]

[project.urls]
"Homepage" = "https://github.com/pelican-plugins/fediverse"
"Issue Tracker" = "https://github.com/pelican-plugins/fediverse/issues"
"Changelog" = "https://github.com/pelican-plugins/fediverse/blob/main/CHANGELOG.md"
"Funding" = "https://donate.getpelican.com/"

[project.optional-dependencies]

[tool.pdm]

[tool.pdm.dev-dependencies]
lint = [
    "invoke>=2.2",
    "ruff>=0.5.0,<0.6.0"
]
test = [
    "markdown>=3.4",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-sugar>=1.0",
]

[tool.pdm.build]
source-includes = [
    "CHANGELOG.md",
    "CONTRIBUTING.md",
]

includes = ["pelican/"]
excludes = ["**/.DS_Store", "**/test_data/**", "tasks.py"]

[tool.autopub]
project-name = "Fediverse"
git-username = "mpaglia0"
git-email = "52496925+botpub@users.noreply.github.com" +++++++++++++++++++++
append-github-contributor = true

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "BLE", # flake8-blind-except
  "C4",  # flake8-comprehensions
  "D",   # pydocstyle
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "ICN", # flake8-import-conventions
  "ISC", # flake8-implicit-str-concat
  "PGH", # pygrep-hooks
  "PL",  # pylint
  "RET", # flake8-return
  "RUF", # ruff-specific rules
  "SIM", # flake8-simplify
  "T10", # flake8-debugger
  "T20", # flake8-print
  "TID", # flake8-tidy-imports
  "TRY", # tryceratops
  "UP",  # pyupgrade
  "W",   # pycodestyle
  "YTT", # flake8-2020
]

ignore = [
  "B010",    # `setattr` with a constant attribute value
  "D100",    # missing docstring in public module
  "D102",    # missing docstring in public method
  "D104",    # missing docstring in public package
  "D203",    # blank line before class docstring
  "D213",    # multi-line docstring summary should start at the second line
  "ISC001",  # avoid implicitly concatenated strings on a single line
  "PLR0912", # too many branches
  "PLR0913", # too many arguments to function call
  "RET505",  # unnecessary `else` after `return` statement
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["pelican"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"