[build-system]
requires = ["pdm-backend >= 2.4.0"]
build-backend = "pdm.backend"
[project]
name = "pelican-fediverse"
version = "1.3.1"
authors = [
  { name="Maurizio Paglia", email="maurizio@mauriziopaglia.it" },
]
description = "A Pelican plugin to publish content on the Fediverse"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pelican-plugins/fediverse"
Issues = "https://github.com/pelican-plugins/fediverse/issues"