[build-system]
requires = ["pdm-backend >= 2.4.0"]
build-backend = "pdm.backend"
license-files = ["LICEN[CS]E*"]

[project.urls]


+++++++++++++++++++

[project]
name = "pelican-fediverse"
version = "1.3.1"
description = "A Pelican plugin to publish content on the Fediverse"
authors = [{name = "Maurizio Paglia", email="maurizio@mauriziopaglia.it"}]
license = {text = "AGPL-3.0"}
readme = "README.md"
keywords = ["pelican", "plugin", "fediverse"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = "~=3.9"
dependencies = [
    "pelican>=4.5",
]

[project.urls]
Homepage = "https://github.com/pelican-plugins/fediverse"
Issues = "https://github.com/pelican-plugins/fediverse/issues"
"Changelog" = "https://github.com/pelican-plugins/fediverse/blob/main/CHANGELOG.md"

[dependency-groups]

[tool.pdm.build]
source-includes = [
    "CHANGELOG.md",

    ]
includes = ["pelican/"]
excludes = ["**/test/**"]

[tool.autopub]
project-name = "Fediverse"
git-username = "mpaglia0"
git-email = "maurizio@mauriziopaglia.it"
append-github-contributor = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
